[tool.poetry]
name = "vicuna"
version = "0.1.0"
description = ""
authors = ["Gustavo Saibro <gustavosaibro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fschat = {extras = ["model-worker", "webui"], version = "^0.2.35"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
